[tool.poetry]
name = "time-series-py"
version = "1.0.0"
description = ""
authors = ["FooQoo <horseshoes.buzz.17@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
