[tool.poetry]
name = "time-series-py"
version = "1.0.0"
description = ""
authors = ["FooQoo <horseshoes.buzz.17@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.0"
jupyter = "^1.0.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
numpy = "^1.21.2"
statsmodels = "^0.13.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
